css/scuole-jit.css
/* ... */
.location-list .location-title span {
    font-weight: 700;
    font-size: .75rem;
    text-transform: uppercase;
}

.location-list .location-content {
    font-size: .88rem;
    padding: 1px 0 0 0;
}

.location-list .location-content p {
    display: block;
    margin: 0 0 0 0;
    font-family: "Titillium Web", Geneva, Tahoma, sans-serif;
    font-size: .88rem;
    font-weight: 400;
}

/* scheda */

.blog-item {
    background: #fff;
    -webkit-box-shadow: 0px 3px 17px #00000046;
    -moz-box-shadow: 0px 3px 17px #00000046;
    Box-shadow: 0px 3px 17px #00000046;
    border: 1px solid #eceff1;
    position: relative;
    height: 100%;
    display: flex;
    flex-direction: column;
    border-radius: 4px;
}

.blog-item .item-content {
    padding: 1.25rem;
    font-size: .8rem;
    line-height: 1.5;
}

.blog-item .item-content p {
    word-wrap: break-word;
}

.blog-item h3 {
    font-weight: 600;
    word-wrap: break-word;
}

@media (min-width: 576px) {
    .blog-item h3 {
        font-size: 1rem;
        line-height: 1.25;
    }
}

/**/
.awesomplete>ul {
    z-index: 12 !important;
}

.awesomplete>ul>li {
    color: #000;
    font-size: .85em;
}

.modal-backdrop {
    z-index: -1;
    display: none;
}


.blogj4a h1,
.blogj4a-onecol h1 {
    color: #00368C;
}

.category-desc p {
    margin-bottom: 0px;
}

/* MODULO NEWS */
.scheda-item {
    background: #fff;
    -webkit-box-shadow: 0 2px 20px 0 rgba(0, 0, 0, .1);
    -moz-box-shadow: 0 2px 20px 0 rgba(0, 0, 0, .1);
    box-shadow: 0 2px 20px 0 rgba(0, 0, 0, .1);
    padding: 1.25rem;
    font-size: .8rem;
    line-height: 1.5;
    border-radius: 6px;
    word-wrap: break-word;
}

.scheda-item.modulorows {
    padding: 0;
}

.mod-news-title {
    font-size: 1rem;
    font-weight: 600;
    line-height: 1.25rem;
}

.wrapperbelow {
    position: relative;
    display: block;
}

.below {
    height: 100%;
    display: block;
    position: absolute;
    width: 100%;
}

.headerbelow,
.headerbelow a {
    color: #fff;
    font-size: .8rem;
}


.mod-news .scheda-item p {
    text-transform: lowercase;
}

.mod-news .scheda-item p::first-letter {
    text-transform: uppercase;
}

.headerbelow {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.headerbelow h3 {
    font-size: 1.6rem;
}

.headerbelow svg {
    fill: #fff;
}

/* ONE COLUMN BLOG

.blogj4a-onecol .blog-item{
    border-radius: 12px;
}

.wrappeonecolblog{
    background: #EBF5FD;
    padding: 100px 0;
}

.blogj4a-onecol .item-content{
    padding: 0!important;
}
.cta-ocb{
    background: #EBF5FD
}

.cta-ocb, .wrappericobandi{
    height: 100%;
    width: 100%;
    position: relative;
}

.cta-ocb svg{
    position: absolute;
    top:50%;
    left: 50%;
    transform: translate(-50%,-50%);
    fill: #003491;
    -webkit-text-fill-color: #003491;
}

.contenticobandi{
    position: absolute;
    top:50%;
    left: 50%;
    transform: translate(-50%,-50%);
    fill: #003491;
    -webkit-text-fill-color: #003491;
}

.cardbandi{
    min-height: 200px;
}

.mod-rows{
    background-image: url(../img/watermarkterritorio.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-attachment:initial;
    background-size: contain;
    padding-bottom: 60px;
}

.mod-rows .textmodulorows h3, .mod-rows h3.sbuttitle{
    color: #003491;
}

.mod-rows .textmodulorows h3{
    font-size: 1.6rem;
}

.textmodulorows p, .mod-textimgageleft p{
    line-height: 1.4rem;
    font-size: .9rem;
}

.textmodulorows .custom h3, .mod-textimgageleft h4{
    font-weight: 100;
    font-size: 1.2rem;
    margin-bottom: 1rem;
}

.menumodulorows h3, .menumodulorows h4, .menumodulorows h5, .menumodulorows h6{
    font-size: 1rem;
    margin-top: 2rem;
}

.menumodulorows a.nav-link{
    color: #06c;
    font-weight: 600;
    position: relative;
    display: flex;
    padding-bottom: 0;
    font-size: .8rem;
}

.menumodulorows a.nav-link::before{
    content: '';
    display: flex;
    width: 20px;
    height: 14px;
    background-image: url(../img/right.svg);
    background-repeat: no-repeat;
    align-self: center !important;
}
*/

/* MENU BLOG
.menublog h3{
    font-size: .85rem;
    color: #747474;
}

.menublog a.nav-link{
    color: #003787;
    font-size: .85rem;
    padding: 5px 0!important;
    font-weight: 600;
}
*/


/* modulo switch language */
@media(min-width:992px) {
    .it-header-center-wrapper .it-header-center-content-wrapper .it-right-zone.normalizeflex .it-search-wrapper.mod-finder_nolightbox {
        margin: 0 80px;
    }
}

.mod-lingua img {
    padding-right: 5px;
}

.mod-lingua ul.lang-inline,
.mod-lingua .lang-inline li {
    display: flex;
    margin: 0;
}

.mod-lingua .lang-inline li {
    padding: 12px;
    font-size: .778em;
    text-transform: uppercase;
}

.mod-lingua ul.lang-block,
.mod-lingua .lang-block li {
    display: block;
    margin: 0;
}

.mod-lingua .lang-block li {
    padding: 0;
    font-size: .778em;
    text-transform: uppercase;
}


/* modulo cerca */

.mod-finder_nolightbox .btn {
    background-color: #fff;
    border-radius: 0 50px 50px 0 !important;
}

.mod-finder_nolightbox input {
    border-radius: 50px 0 0 50px !important;
}

#searchmodal.modal .modal-dialog {
    width: 100%;
    max-width: 100%;
    height: 100%;
    margin: 0;
    display: flex;
}

.bs-it-sticky-wrapper .searchforminheader {
    display: none;
}

button.search-link {
    border: 0;
    background: transparent;
}

@media(max-width:991px) {
    .searchforminheader {
        display: none;
    }
}



/* MENU SU COLONNA DI SINISTRA */
@media (min-width: 992px) {
    .border-aside {
        border-left: 1px solid #E0E0E0;
    }

    .border-row {
        border-top: 1px solid #e0e0e0;
    }

    .aside-sticky {
        position: sticky !important;
        top: 56px;
    }
}
/* ... */

